# rp-email-mgmt

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml
rpemail/: auth.py  config.py  google_api.py  logging.py  main.py  template.py  utils.py
rpemail/templates/: README.md  signature_v1.html  signature_v2.html
